- 2003-08-11	leo

	* PCC: approaching life analysis for subroutine in/out variables
	       this breaks some imcpasm tests

- 2003-08-10	leo

	* PCC: experimental tail call optimization with -Oc

- 2003-08-09	leo

	* PCC: fix nested subs (preserve ret continuation)
	* PCC: fix multiple return blocks

	* SYNTAX:

	  NEW: unless arg1 relop arg2 goto label

	  works like if (with reversed relop), so that $HL can
	  directly translate:
	    if (a < b)
	      {block}
	    [skip:]
	  to
	    unless a < b goto skip
	      block
	      ...
	    skip:

- 2003-08-08	leo

	* try_find_op: e.g. add_n_i_n => add_n_n_i

- 2003-08-02	leo

	* DEPRECATE NESTED SUBROUTINES and CODE OUTSIDE OF SUBS

	* fix CFG for pcc invoke
	* use want_regno in register assignments for -Oc
	* pcc_optimize() experimental post_optimizer -Oc

- 2003-08-01	leo

	* version 0.0.10.3

	* unprototyped subroutines now check the amount and type
	  of parameters against their .param definitions at runtime
	* TestCompiler.pm: capture stderr too

	* added coroutine code courtesy of Kenneth A Graves
	  s. t/syn/pcc.t for an example and #23186 for a description

	* if a pcc sub calls another sub (or it yields), the passed
	  registers (I5...) are not used as parameters dirctly.
	* emit savetop/restoretop in a yield block

- 2003-07-30	leo

	* PCC stuff:
	* prototyped calling sequence
	* overflow array
	* put all in a separate file: pcc.c

- 2003-07-29	leo

	* version 0.0.10.2
	* first try on implementing PCC from docs/calling_conventions.pod
	  - no optimizations
	  - only upper half of registers are preserved
	  - s. t/imcpasm/pcc.t for generated code

	* ignore text between =$pod_marker and =cut

- 2003-07-09	leo

	* version 0.0.10.1
	* -E, --pre-process-only

- 2003-07-06	leo

	* new instruction:
	  $Preg = new classname, $Pinitializer

- 2003-07-03	leo

	* switch to PASM/PIR mode, when reading .pasm/.imc include files
	* search runtime/parrot/include too for includes

- 2003-07-02	leo

	* build imcc as parrot